adult/logs/create_fluctuations_15091918_570.out
SLURM_JOBID:  15092491
SLURM_ARRAY_TASK_ID:  570
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 3, 0.005, 40)


